--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "cypress": "^13.14.2"
+    "@simonsmith/cypress-image-snapshot": "^9.1.0",
+    "cypress": "^13.14.2",
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
     "test": "npm cypress run"
